--- a/package.json
+++ b/package.json
@@ -48,12 +48,15 @@
         "release:prod": "yarn build && yarn publish:prod",
         "release:pin-versions": "turbo run copy -- -- --pin-versions",
         "lint": "eslint \"packages/**/*.ts\" \"test/**/*.ts\"",
-        "lint:fix": "eslint \"packages/**/*.ts\" \"test/**/*.ts\" --fix"
+        "lint:fix": "eslint \"packages/**/*.ts\" \"test/**/*.ts\" --fix",
+        "format": "biome format --write .",
+        "format:check": "biome format ."
     },
     "devDependencies": {
         "@apify/eslint-config-ts": "^0.4.0",
         "@apify/log": "^2.4.0",
         "@apify/tsconfig": "^0.1.0",
+        "@biomejs/biome": "^1.6.1",
         "@commitlint/config-conventional": "^19.0.0",
         "@playwright/browser-chromium": "1.41.2",
         "@playwright/browser-firefox": "1.41.2",
@@ -88,6 +91,7 @@
         "cross-env": "^7.0.3",
         "deep-equal": "^2.0.5",
         "eslint": "^8.52.0",
+        "eslint-config-prettier": "^9.1.0",
         "express": "^4.18.1",
         "fs-extra": "^11.0.0",
         "gen-esm-wrapper": "^1.1.3",
